# fast-image-viewer-20260523

./: .gitignore  DESIGN.md  README.md  build_exe.bat  create_release_sha256.bat  create_release_zip.bat  fast_image_viewer.spec  pyproject.toml  release_check_all.bat  requirements-dev.txt  run_exe_smoke.bat  run_gui_smoke.bat  run_release_zip_smoke.bat  start_app.bat
app/: __init__.py  main.py
app/core/: benchmark.py  cache_manager.py  image_resizer.py  image_scanner.py  preview_renderer.py  recent_folders.py  thumbnail_cache.py  viewer_options.py
app/ui/: compare_view.py  folder_tree.py  fullscreen_preview.py  image_preview.py  main_window.py  operation_guide_dialog.py  options_dialog.py  thumbnail_grid.py
app/utils/: __init__.py  image_types.py  long_path.py
scripts/: check_release_zip.ps1  check_release_zip_extract.ps1  create_release_sha256.ps1  create_release_zip.ps1  exe_smoke_check.ps1  gui_smoke_check.py
tests/: test_benchmark.py  test_cache_manager.py  test_compare_view.py  test_copy_shortcut.py  test_display_zoom.py  test_folder_selection.py  test_fullscreen_preview.py  test_image_resizer.py  test_image_scanner.py  test_long_path.py  test_preview_pan.py  test_preview_renderer.py  test_preview_request_queue.py  test_recent_folders.py  test_release_e2e_check.py  test_sorting.py  test_thumbnail_cache.py  test_thumbnail_grid_navigation.py  test_thumbnail_prefetch_priority.py  test_viewer_options.py
tools/: deploy_local_app.ps1  release_e2e_check.py
