[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-image-viewer"
version = "0.1.0"
description = "Lightweight Windows image viewer with thumbnails, preview, comparison, resize save, and cache management."
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "PyInstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "test_artifacts*"]
